Fixed overlapping image problem with the navbar

--- a/bambi-laravel/public/css/product.css
+++ b/bambi-laravel/public/css/product.css
@@ -41,7 +41,7 @@
 
 .shoe_img{
   float: left;
-  margin-top: -130px;
+  margin-top: 30px;
   margin-left: 120px;
 }
 
